--- a/email-notifications/Jenkinsfile
+++ b/email-notifications/Jenkinsfile
@@ -6,6 +6,10 @@ node {
           [$class: 'DevelopersRecipientProvider'],
           [$class: 'RequesterRecipientProvider']
   ])
+  
+  environment {
+      JAVA_OPTS = '-Djava.awt.headless=true -Dmail.smtp.starttls.enable=true'
+  }
 
   // job
   try {
